[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/starfield.png" type="Texture" id=2]
[ext_resource path="res://wave_progess.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://planets/planet.tscn" type="PackedScene" id=5]
[ext_resource path="res://planets/moon_path.gd" type="Script" id=6]
[ext_resource path="res://planets/moon.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0.487675, 152.642, -0.487675, -152.642, 677.476, 286.637, 30.2359, 0, -30.2359, 0, 520.445, 114, 0.97535, -131.185, -0.97535, 131.185, 359.024, 275.908, -33.1619, 1.9507, 33.1619, -1.9507, 514.592, 443.668, -15.1179, 161.42, 15.1179, -161.42, 677.476, 286.637 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2.67978, 2.19034, 0, 0, 0, 0, 1438.37, 2.19034 )
}

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1434.0
margin_bottom = 2556.0
texture = ExtResource( 2 )
expand = true

[node name="wave_progress" parent="." instance=ExtResource( 3 )]
offset = Vector2( 25, 750 )
transform = Transform2D( 1, 0, 0, 1, 25, 750 )

[node name="hud" parent="." instance=ExtResource( 4 )]

[node name="earth" parent="." instance=ExtResource( 5 )]
position = Vector2( 696.431, 2419.6 )
rotation = 0.410152

[node name="moon_path" type="Path2D" parent="."]
editor/display_folded = true
position = Vector2( 0.129822, 2076.43 )
scale = Vector2( 1.34856, 1.22744 )
curve = SubResource( 1 )
script = ExtResource( 6 )

[node name="follow" type="PathFollow2D" parent="moon_path"]
position = Vector2( 677.476, 286.637 )
rotation = 0.410152
rotate = false

[node name="Moon" parent="moon_path/follow" instance=ExtResource( 7 )]

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="spawn_path" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 2 )

[node name="spawn_location" type="PathFollow2D" parent="spawn_path"]
position = Vector2( 2.67978, 2.19034 )
rotate = false

[node name="launch_point" type="Node2D" parent="."]
position = Vector2( 699.511, 2297 )
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
